--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env # Carrega as variáveis de ambiente do arquivo .env
+      - ./.env
     ports:
-      - "5432:5432" # Opcional: para conectar ao banco de dados da sua máquina
+      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
       interval: 10s
@@ -18,7 +18,6 @@ services:
     build: ./backend
     container_name: desafio_backend
     volumes:
-      # Renomeie SEU arquivo CSV para o nome abaixo na pasta data
       - ./backend/dados/Series_02_07_2025_13_30_29.csv:/code/data/Series_02_07_2025_13_30_29.csv
     env_file:
       - ./.env
@@ -26,7 +25,7 @@ services:
       - "8000:8000"
     depends_on:
       db:
-        condition: service_healthy # Espera o banco de dados estar saudável
+        condition: service_healthy # Espera o banco de dados estar disponível
 
   frontend:
     build: ./frontend
